[gd_scene load_steps=4 format=3 uid="uid://cdj41gtg1ptw6"]

[ext_resource type="Script" path="res://scenes/plate.gd" id="1_53dkq"]
[ext_resource type="Texture2D" uid="uid://logukjgm6jcg" path="res://sprites/plate.png" id="1_xcffs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2qd3"]
size = Vector2(457, 66)

[node name="plate" type="StaticBody2D"]
position = Vector2(-30, 33)
script = ExtResource("1_53dkq")

[node name="BreakTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(836.5, 1747)
shape = SubResource("RectangleShape2D_r2qd3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(836, 1774)
scale = Vector2(0.880392, 1.03505)
texture = ExtResource("1_xcffs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(834, 1716)
shape = SubResource("RectangleShape2D_r2qd3")

[connection signal="timeout" from="BreakTimer" to="." method="_on_break_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
